syntax = "proto3";
package wavesenterprise;

option java_multiple_files = true;
option java_package = "com.wavesenterprise.transaction.protobuf.docker";
option csharp_namespace = "WavesEnterprise";
option go_package = "wavesenterprise.com/weproto";

import "google/protobuf/wrappers.proto";
import "contract_api_version.proto";
import "atomic_badge.proto";
import "validation_policy.proto";
import "data_entry.proto";

message CreateContractTransaction {
  bytes id = 1;
  bytes sender_public_key = 2;
  string image = 3;
  string image_hash = 4;
  string contract_name = 5;
  repeated DataEntry params = 6;
  int64 fee = 7;
  int64 timestamp = 8;
  google.protobuf.BytesValue fee_asset_id = 9;
  AtomicBadge atomic_badge = 10;
  ValidationPolicy validation_policy = 11;
  ContractApiVersion api_version = 12;
  repeated bytes proofs = 13;
  bytes sender_address = 14;
}